More standardising colours

--- a/DragonBallV2.html
+++ b/DragonBallV2.html
@@ -463,15 +463,15 @@
     <h2>Training Roll <input type="number" min="1" value="1" name="attr_intensity"><button class="stress-button" name="roll_training" type="roll" value="/em puts their body on the line in training, attempt [[@{intensity}d10!10+@{agility_modifier}+@{tenacity_modifier}+@{insight_modifier}+@{personality_modifier}]]>[[?{Condition Range? |Very Easy, 10*@{intensity}+floor(@{power_level}/5)*5|Easy, 20*@{intensity}+floor(@{power_level}/5)*5|Medium, 30*@{intensity}+floor(@{power_level}/5)*5|Hard, 40*@{intensity}+floor(@{power_level}/5)*5|Very Hard, 50*@{intensity}+floor(@{power_level}/5)*5|Nearly Impossible, 60*@{intensity}+floor(@{power_level}/5)*5}]] gaining [[@{power_level}*@{intensity}]] xp"></button></h2>
     <div class="transformations-page">
         <div class="transformations-top">
-            <div style="grid-area: tn; border-right: 1px solid silver; border-bottom: 1px solid silver;"><h3 style="color: silver;">Name:</h3></div>
+            <div style="grid-area: tn; border-right: 1px solid darkgray; border-bottom: 1px solid darkgray;"><h3>Name:</h3></div>
             <!--<div style="grid-area: tty; border-right: 1px solid silver;"><h3 style="color: silver;">Type:</h3></div>-->
-            <div style="grid-area: ta; border-right: 1px solid silver; border-bottom: 1px solid silver;"><h3 style="color: silver;">Agi:</h3></div>
-            <div style="grid-area: ti; border-right: 1px solid silver; border-bottom: 1px solid silver;"><h3 style="color: silver;">Ins:</h3></div>
-            <div style="grid-area: tpe; border-right: 1px solid silver; border-bottom: 1px solid silver;"><h3 style="color: silver;">Per:</h3></div>
-            <div style="grid-area: tsc; border-right: 1px solid silver; border-bottom: 1px solid silver;"><h3 style="color: silver;">Sch:</h3></div>
-            <div style="grid-area: tsp; border-right: 1px solid silver; border-bottom: 1px solid silver;"><h3 style="color: silver;">Spi:</h3></div>
-            <div style="grid-area: tst; border-right: 1px solid silver; border-bottom: 1px solid silver;"><h3 style="color: silver;">Str:</h3></div>
-            <div style="grid-area: tte;"><h3 style="color: silver;">Ten:</h3></div>
+            <div style="grid-area: ta; border-right: 1px solid darkgray; border-bottom: 1px solid darkgray;"><h3>Agi:</h3></div>
+            <div style="grid-area: ti; border-right: 1px solid darkgray; border-bottom: 1px solid darkgray;"><h3>Ins:</h3></div>
+            <div style="grid-area: tpe; border-right: 1px solid darkgray; border-bottom: 1px solid darkgray;"><h3>Per:</h3></div>
+            <div style="grid-area: tsc; border-right: 1px solid darkgray; border-bottom: 1px solid darkgray;"><h3>Sch:</h3></div>
+            <div style="grid-area: tsp; border-right: 1px solid darkgray; border-bottom: 1px solid darkgray;"><h3>Spi:</h3></div>
+            <div style="grid-area: tst; border-right: 1px solid darkgray; border-bottom: 1px solid darkgray;"><h3>For:</h3></div>
+            <div style="grid-area: tte;"><h3>Ten:</h3></div>
         </div>
 
         <div class="transformations-bot">
